[gd_scene load_steps=4 format=3 uid="uid://dd06njq5elwlh"]

[ext_resource type="Script" path="res://addons/quest_system/views/update_dialog.gd" id="1_f82g1"]
[ext_resource type="Texture2D" uid="uid://cwulkprc5aq8d" path="res://addons/quest_system/assets/update.svg" id="1_yub14"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_j6wmr"]

[node name="AcceptDialog" type="AcceptDialog"]
title = "Update!"
initial_position = 1
size = Vector2i(600, 500)
visible = true
unresizable = true
min_size = Vector2i(300, 250)
max_size = Vector2i(600, 500)
ok_button_text = "Close"
script = ExtResource("1_f82g1")

[node name="HTTPRequest" type="HTTPRequest" parent="."]
unique_name_in_owner = true

[node name="VBoxContainer" type="VBoxContainer" parent="."]
offset_left = 8.0
offset_top = 8.0
offset_right = 592.0
offset_bottom = 451.0
alignment = 1

[node name="Logo" type="TextureRect" parent="VBoxContainer"]
layout_mode = 2
texture = ExtResource("1_yub14")
stretch_mode = 3

[node name="VersionLabel" type="RichTextLabel" parent="VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
theme_override_styles/normal = SubResource("StyleBoxEmpty_j6wmr")
bbcode_enabled = true
text = "[center]A new version of [color=orange]QuestSystem[/color] is available: [color=orange]%s[/color]
Current:  [color=red]%s[/color]"
fit_content = true
shortcut_keys_enabled = false

[node name="DownloadButton" type="Button" parent="VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
text = "Download"

[node name="ReleaseNotes" type="TextEdit" parent="VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_vertical = 3
editable = false

[node name="LinkButton" type="LinkButton" parent="VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
text = "Read Changes..."

[connection signal="request_completed" from="HTTPRequest" to="." method="_on_http_request_request_completed"]
[connection signal="pressed" from="VBoxContainer/DownloadButton" to="." method="_on_download_button_pressed"]
